Mobile nav – search input: changed background colour of button to  wine so that the icon can be seen. Added overflow-x: clip to body element to fix x-overflow issue on mobile.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,13 +12,12 @@
 }
 
 html { 
-    height: 100%; 
+    height: 100%;
+    width: 100%; 
     overflow-y:auto; 
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    overflow-x: hidden;
-    width: 100%;
 }
 
 body {
@@ -26,6 +25,8 @@ body {
     font-weight: 300;
     font-size: 1rem;
     color: #333333;
+    width: 100%;
+    overflow-x: clip;
 }
 
 @media (min-width: 992px) {
@@ -98,6 +99,10 @@ a:hover {
     .nav-link {
         padding: 0.5rem;
     }
+}
+
+.search-btn-mobile {
+    background-color: #b90039;
 }
 
 .fa-search {
